# AnimationBuilder

./: -  .gitignore  README.md  flake.nix  pyproject.toml  renderer.py  test.sh
Assets/: README.md
Examples/: countdownTest.sh  intermissionTest.sh  startingSoonTest.sh  stopwatchTest.sh
Output/: README.md
src/animation_builder/: __init__.py  main.py
tests/: test.sh
